# WISER

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.MD  LICENSE  MISSION.md  Makefile  README.md  Secret-template.mk  WISER-MacOSX.spec  WISER-macOS.spec  WISER.spec  bootstrap.py  check_arch.sh  conda_pkgs.txt  contributing.html  debug_output.txt  debug_win_pyinstaller.txt  developer.html  editor.txt  env-test.yml  envi.py  environment.yml  genindex.html  get-started.html  index.html  objects.inv  package-list.txt  pyproject.toml  release_notes.md  requirements-min.txt  requirements.txt  search.html  searchindex.js  spectra.py  test.py  test_util.py  user-manual.html  (+3 more)
.doctrees/: contributing.doctree  developer.doctree  environment.pickle  get-started.doctree  index.doctree  user-manual.doctree
.github/: pull_request_template.md
_sources/: contributing.rst  get-started.rst  index.rst
_static/: documentation_options.js
developer-content/: CI-CD-Releases.html  branching-strategy.html  code-review-and-quality.html  codesign-mac.html  devenv-mac.html  devenv-win.html  environment-setup.html  testing-standards.html
doc/: codesign-mac.md  contrast-stretch.md  datafiles.md  devenv-mac.md  devenv-win.md  diagnostics.md  envi-interleavings-print.pptx  envi-interleavings.pptx  multi-views.md  other-projects.md  plugins.md  project-notes.md
etc/: .gitignore  Dockerfile  Makefile  conda-lock.yml  conda-osx-64.lock.yml  conda-osx-arm64.lock.yml  conda-win-64.lock.yml  dev-conda-lock.yml  entry_point.sh  prod-conda-lock.yml  (+9 more)
(+541 files in other folders)
